# dynabot-ros

./: .gitignore  .gitmodules  README.md
.cursor/rules/: ros2rules.mdc
src/dynabot_bringup/: CMakeLists.txt  package.xml
src/dynabot_bringup/config/: ekf.yaml  nav2_params.yaml  slam_toolbox_online_async.yaml
src/dynabot_bringup/launch/: dynabot_bringup.launch.py  encoders.launch.py  hokuyo.launch.py  hokuyo_test.launch.py  lane_detector.launch.py  lights.launch.py  motors.launch.py  robot_ekf.launch.py  robot_model.launch.py  robot_navigation.launch.py  robot_sim_bringup.launch.py  robot_sim_nav.launch.py  sensor.launch.py
src/dynabot_camera/: package.xml  setup.cfg  setup.py
src/dynabot_camera/dynabot_camera/: lane_detection.py  lane_detection2.py
src/dynabot_controller/: CMakeLists.txt  package.xml
src/dynabot_controller/config/: dynabot_controller.yaml  (+3 more)
src/dynabot_cv/: package.xml  setup.cfg  setup.py
src/dynabot_description/: CMakeLists.txt  package.xml
src/dynabot_encoders/: package.xml  setup.cfg  setup.py
src/dynabot_imu/: package.xml  setup.cfg  setup.py
src/dynabot_lidar/: package.xml  setup.cfg  setup.py
src/dynabot_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dynabot_localization/config/: ekf.yaml
src/dynabot_localization/dynabot_localization/: imu_republisher.py
src/dynabot_localization/launch/: local_localization.launch.py
src/joystick_control/: package.xml  setup.py
src/lane_detection/: package.xml  setup.py
src/motor_control/: package.xml  setup.py
src/motor_test/: package.xml  setup.py
(+23 files in other folders)
